Now have a generated blog post index

--- a/template/gradle.properties
+++ b/template/gradle.properties
@@ -1,4 +1,6 @@
 kotlin.code.style=official
 org.gradle.caching=true
-org.gradle.configuration-cache=true
+
+## I set this to false because of a markdown generation issue I had. Could not resolve it anymore.
+org.gradle.configuration-cache=false
 ksp.incremental=false
